<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KECircle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="title_activity_login">Login</string>

    <string name="registration_instruction">I do not have a username and password details. Click the button below to register</string>

    <string name="register_button">Register Now</string>

    <string name="title_activity_register">Register</string>

    <string name="title_activity_chat"> Chat </string>
    <string name="title_activity_forum"> Forum </string>
    <string name="title_activity_home"> Home </string>

    <string name="welcome">WELCOME</string>

    <string name="is_login">You have been successfully login </string>

    <string name="sign_up">Sign Up</string>
    <string name="begin_button">Begin</string>


</resources>
