<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="#ffffff"

    tools:context="com.example.decode.KECircle.LoginActivity">

    <TextView

        android:id="@+id/welcome"

        android:text="@string/welcome"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"

        android:textColor="#f0c80c"

        android:textSize="30sp"

        android:textStyle="bold"

        android:layout_marginTop="157dp"/>

    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/username"

        android:id="@+id/login_user"

        android:textColor="#000000"

        android:textSize="40sp"

        android:textStyle="bold"

        android:layout_below="@+id/welcome"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="25dp" />

    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/is_login"

        android:id="@+id/message"

        android:textColor="#000000"

        android:layout_marginTop="44dp"

        android:layout_below="@+id/login_user"

        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_button"
        android:id="@+id/Beginbutton"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/message"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:onClick="BeginButtonClicked" />

</RelativeLayout>
