<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:paddingLeft="@dimen/activity_horizontal_margin"

    android:paddingRight="@dimen/activity_horizontal_margin"

    android:paddingTop="@dimen/activity_vertical_margin"

    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="#ffffff"

    tools:context=".MainActivity">

    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="Username"

        android:id="@+id/username"

        android:textColor="#000000"

        android:textSize="16sp"

        android:layout_marginTop="20dp"

        android:layout_marginLeft="10dp"

        android:layout_marginStart="10dp"

        android:layout_alignParentTop="true"

        android:layout_alignParentLeft="true" />

    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="Password"

        android:id="@+id/password"

        android:textColor="#000000"

        android:textSize="16sp"

        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_marginTop="38dp" />

    <Button

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/login"

        android:id="@+id/login"

        android:layout_below="@+id/password_field"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp" />

    <TextView

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/registration_instruction"

        android:textSize="16sp"

        android:textColor="#000000"

        android:id="@+id/textView"

        android:layout_above="@+id/register_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp" />

    <Button

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:text="@string/register_button"

        android:id="@+id/register_button"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username_field"

        android:layout_below="@+id/username"
        android:layout_alignLeft="@+id/username"
        android:layout_alignStart="@+id/username"
        android:layout_alignRight="@+id/password_field"
        android:layout_alignEnd="@+id/password_field" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_field"

        android:layout_below="@+id/password"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password" />

</RelativeLayout>